5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1764_1583.log
== TEST (2019-05-25 10:33:26) 
-- CODE:
vetor=input("numeros: ")

s= vetor[0:3] + '.' + [3:7] + '.' + [7:10]
-- ERROR:
File "XXXX", line 3
    s= vetor[0:3] + '.' + [3:7] + '.' + [7:10]
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:34:25) 
-- CODE:
vetor=input("numeros: ")

s= vetor[0:3] , '.', [3:7], '.', [7:10]
print(s)
-- ERROR:
File "XXXX", line 3
    s= vetor[0:3] , '.', [3:7], '.', [7:10]
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 12:18:11) 
-- CODE:
vetor=input("numeros: ")

s= vetor[0:3] , '.', [3:7], '.', [7:10]
print(s)
-- EXECUTION TIME:
0.163142
-- ERROR:
  File "/home/codebench/codes/1764/1583/main.py", line 3
    s= vetor[0:3] , '.', [3:7], '.', [7:10]
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
